--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- Container = Header, Table, & Input Form -->
     <div class="container">
         <div class="jumbotron" style="background-color: brown; color: white">
-            <h1 class="text-center">Anytime is Train Time</h1>
-            <h3 class="text-center">Choo Choo!</h3>
+            <h1 class="text-center">MTA</h1>
+            <h3 class="text-center">Eat, Sleep, Train, Repeat</h3>
         </div>
         <!-- Row to hold Table and Input form -->
         <div class="row">
